--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,26 @@
 akka {
   loglevel = DEBUG
   actor {
+    provider = "akka.remote.RemoteActorRefProvider"
     debug {
-      # enable function of LoggingReceive, which is to log any received message at
-      # DEBUG level
       receive = on
     }
   }
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+    }
+  }
 }
+
+serverapp.akka.remote.netty.tcp.port = 2555
+clientapp.akka.remote.netty.tcp.port = 2556
+productcatalog.akka.remote.netty.tcp.port = 2557
+
+akka.persistence.journal.leveldb.native = on
+akka.actor.warn-about-java-serializer-usage = off
+akka.persistence.journal.leveldb.dir = "target/journal"
+akka.persistence.snapshot-store.local.dir = "target/snapshots"
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
